--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,5 +33,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_bigquery_projects:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    ga4_projects:
+      staging:
+        +materialized: view
+      marts:
+        +materialized: table        
