--- a/models/ga_projects/staging/_ga__sources.yml
+++ b/models/ga_projects/staging/_ga__sources.yml
@@ -1,7 +1,7 @@
 version: 2
 
 sources:
-  - name: bq_data
+  - name: ga
     database:  bigquery-public-data
     dataset: google_analytics_sample
     tables:
