--- a/models/ga_projects/marts/_ga_mart__models.yml
+++ b/models/ga_projects/marts/_ga_mart__models.yml
@@ -5,6 +5,15 @@ models:
     description: user_information
     columns:
     - name: customer_id
+      description: unique id of visitor on the site
+      tests:
+        - unique
+        - not_null
+
+  - name: fct_ga_sessions
+    description: user_information
+    columns:
+    - name: customer_id
       description: Unique identifier for the object.
       tests:
         - unique
